@@ -113,32 +113,32 @@
 coef.mvr <- function(object, ncomp = object$ncomp, comps, intercept = FALSE,
                      ...)
 {
-    if (missing(comps) || is.null(comps)) {
-        ## Cumulative coefficients:
-        B <- object$coefficients[,,ncomp, drop=FALSE]
-        if (isTRUE(intercept)) {      # Intercept only has meaning for
-                                      # cumulative coefficients
-            dB <- dim(B)
-            dB[1] <- dB[1] + 1
-            dnB <- dimnames(B)
-            dnB[[1]] <- c("(Intercept)", dnB[[1]])
-            BInt <- array(dim = dB, dimnames = dnB)
-            BInt[-1,,] <- B
-            for (i in seq(along = ncomp))
-                BInt[1,,i] <- object$Ymeans - object$Xmeans %*% B[,,i]
-            B <- BInt
-        }
-    } else {
-        ## Individual coefficients:
-        B <- object$coefficients[,,comps, drop=FALSE]
-        g1 <- which(comps > 1)
-        ## Indiv. coef. must be calculated since object$coefficients is
-        ## cumulative coefs.
-        B[,,g1] <- B[,,g1, drop=FALSE] -
-            object$coefficients[,,comps[g1] - 1, drop=FALSE]
-        dimnames(B)[[3]] <- paste("Comp", comps)
+  if (missing(comps) || is.null(comps)) {
+    ## Cumulative coefficients:
+    B <- object$coefficients[,,ncomp, drop=FALSE]
+    if (isTRUE(intercept)) {      # Intercept only has meaning for
+      # cumulative coefficients
+      dB <- dim(B)
+      dB[1] <- dB[1] + 1
+      dnB <- dimnames(B)
+      dnB[[1]] <- c("(Intercept)", dnB[[1]])
+      BInt <- array(dim = dB, dimnames = dnB)
+      BInt[-1,,] <- B
+      for (i in seq(along = ncomp))
+        BInt[1,,i] <- object$Ymeans - object$Xmeans %*% B[,,i]
+      B <- BInt
     }
-    return(B)
+  } else {
+    ## Individual coefficients:
+    B <- object$coefficients[,,comps, drop=FALSE]
+    g1 <- which(comps > 1)
+    ## Indiv. coef. must be calculated since object$coefficients is
+    ## cumulative coefs.
+    B[,,g1] <- B[,,g1, drop=FALSE] -
+      object$coefficients[,,comps[g1] - 1, drop=FALSE]
+    dimnames(B)[[3]] <- paste("Comp", comps)
+  }
+  return(B)
 }
 
 ## fitted.mvr: Extract the fitted values.  It is needed because the case
@@ -147,11 +147,11 @@ coef.mvr <- function(object, ncomp = object$ncomp, comps, intercept = FALSE,
 #' @rdname coef.mvr
 #' @export
 fitted.mvr <- function(object, ...) {
-    if (inherits(object$na.action, "exclude")) {
-        naExcludeMvr(object$na.action, object$fitted.values)
-    } else {
-        object$fitted.values
-    }
+  if (inherits(object$na.action, "exclude")) {
+    naExcludeMvr(object$na.action, object$fitted.values)
+  } else {
+    object$fitted.values
+  }
 }
 
 ## residuals.mvr: Extract the residuals.  It is needed because the case
@@ -160,11 +160,11 @@ fitted.mvr <- function(object, ...) {
 #' @rdname coef.mvr
 #' @export
 residuals.mvr <- function(object, ...) {
-    if (inherits(object$na.action, "exclude")) {
-        naExcludeMvr(object$na.action, object$residuals)
-    } else {
-        object$residuals
-    }
+  if (inherits(object$na.action, "exclude")) {
+    naExcludeMvr(object$na.action, object$residuals)
+  } else {
+    object$residuals
+  }
 }
 
 ## naExcludeMvr: Perform the equivalent of naresid.exclude and
@@ -200,20 +200,20 @@ residuals.mvr <- function(object, ...) {
 #' \code{\link{napredict}}, \code{\link{naresid}}
 #' @keywords regression multivariate internal
 naExcludeMvr <- function(omit, x, ...) {
-    if (length(omit) == 0 || !is.numeric(omit))
-        stop("invalid argument 'omit'")
-    if (length(x) == 0)
-        return(x)
-    n <- nrow(x)
-    keep <- rep.int(NA, n + length(omit))
-    keep[-omit] <- 1:n
-    x <- x[keep,,, drop = FALSE]        # This is where the real difference is!
-    temp <- rownames(x)
-    if (length(temp)) {
-        temp[omit] <- names(omit)
-        rownames(x) <- temp
-    }
+  if (length(omit) == 0 || !is.numeric(omit))
+    stop("invalid argument 'omit'")
+  if (length(x) == 0)
     return(x)
+  n <- nrow(x)
+  keep <- rep.int(NA, n + length(omit))
+  keep[-omit] <- 1:n
+  x <- x[keep,,, drop = FALSE]        # This is where the real difference is!
+  temp <- rownames(x)
+  if (length(temp)) {
+    temp[omit] <- names(omit)
+    rownames(x) <- temp
+  }
+  return(x)
 }
 
 ## loadings is in stats, but doesn't work for prcomp objects, and is not
@@ -257,103 +257,108 @@ loadings <- function(object, ...) UseMethod("loadings")
 #' @rdname scores
 #' @export
 loadings.default <- function(object, ...) {
-    L <- if (inherits(object, "prcomp")) object$rotation else object$loadings
-    if (!(inherits(L, "loadings") || inherits(L, "list")))
-        class(L) <- "loadings"
-    attr(L, "explvar") <- explvar(object)
-    L
+  L <- if (inherits(object, "prcomp")) object$rotation else object$loadings
+  if (!(inherits(L, "loadings") || inherits(L, "list")))
+    class(L) <- "loadings"
+  attr(L, "explvar") <- explvar(object)
+  L
 }
 
 ## scores: Return the scores (also works for prcomp/princomp objects):
 #' @rdname scores
 #' @export
 scores <- function(object, ...) UseMethod("scores")
+# #' @rdname scores
+# #' @export
+# scores.default <- function(object, ...) {
+#   S <- if (inherits(object, "prcomp")) object$x else object$scores
+#   if (!(inherits(S, "scores") || inherits(S, "list")))
+#     class(S) <- "scores"
+#   attr(S, "explvar") <- explvar(object)
+#   S
+# }
+
 #' @rdname scores
 #' @export
-scores.default <- function(object, ...) {
+scores.default <- function(object, estimate, newdata, ...){
+  allEstimates <- c("all", "train", "CV", "test")
+  scoreList <- list()
+  if (missing(estimate)) {
+    ## Select the `best' available estimate
+    if (!missing(newdata)) {
+      estimate = "test"
+    } else {
+      estimate = "train"
+    }
+  } else {
+    estimate <- allEstimates[pmatch(estimate, allEstimates)]
+    if (any(is.na(estimate)))
+      stop("`estimate' should be a subset of ",
+           paste(allEstimates, collapse = ", "))
+    if (any(estimate == "all")) {
+      estimate <- allEstimates[-1] # Try all estimates (except "all")
+      if (missing(newdata))
+        estimate <- setdiff(estimate, "test")
+      if (is.null(object$validation))
+        estimate <- setdiff(estimate, "CV")
+    }
+  }
+  if("train" %in% estimate){
     S <- if (inherits(object, "prcomp")) object$x else object$scores
     if (!(inherits(S, "scores") || inherits(S, "list")))
-        class(S) <- "scores"
+      class(S) <- "scores"
     attr(S, "explvar") <- explvar(object)
-    S
+    scoreList$train <- S
+  }
+  if("test" %in% estimate){
+    if (missing(newdata))
+      stop("Missing `newdata'.")
+    mat <- buildDesignMatrix(newdata)
+    centerX <- centerDesignMatrix(mat)
+    totalXvar <- sum(centerX^2, na.rm = TRUE)
+    S <- predict(object, newdata=newdata, type="scores")
+    if (!(inherits(S, "scores") || inherits(S, "list")))
+      class(S) <- "scores"
+    contrib <- colSums(S^2) * colSums(object$loadings^2)
+    S <- attachExplvar(S, contrib, totalXvar)
+    scoreList$test <- S
+  }
+  if("CV" %in% estimate){
+    if (is.null(object$validation))
+      stop("`object' has no `validation' component")
+    N <- nrow(object$scores)
+    S <- matrix(0.0, N, ncol(object$scores))
+    dimnames(S) <- dimnames(object$scores)
+    contrib_seg <- rep(0, ncol(object$scores))
+    for(seg in seq_along(object$validation$segments)){
+      rows <- object$validation$segments[[seg]]
+      newd <- object$model[rows,,drop=FALSE]
+      cvfit <- update(object, subset=!((1:N)%in%rows))
+      preds <- predict(cvfit, newdata = newd, type = "scores")
+      S[rows,] <- preds
+      newres <- centerDesignMatrix(buildDesignMatrix(newd))
+      prev_ss <- sum(newres^2)
+      for(a in seq_len(ncol(S))){
+        recon <- tcrossprod(preds[,a], cvfit$loadings[,a])
+        newres <- newres - recon
+        contrib_seg[a] <- contrib_seg[a] + (prev_ss - sum(newres^2))
+        prev_ss <- sum(newres^2)
+      }
+    }
+    if (!(inherits(S, "scores") || inherits(S, "list")))
+      class(S) <- "scores"
+    totalXvar <- if (!is.null(object$Xtotvar)) object$Xtotvar
+                 else sum(centerDesignMatrix(model.matrix(object))^2, na.rm = TRUE)
+    S <- attachExplvar(S, contrib_seg, totalXvar)
+    scoreList$CV <- S
+  }
+  if(length(scoreList) == 1){
+    return(scoreList[[1]])
+  } else {
+    class(scoreList) <- "scoreList"
+    return(scoreList)
+  }
 }
-#' #' @rdname scores
-#' #' @export
-#' scores.mvr_not_now <- function(object, estimate, newdata, ...){
-#'   browser()
-#'   allEstimates <- c("all", "train", "CV", "test")
-#'   if (missing(estimate)) {
-#'     ## Select the `best' available estimate
-#'     if (!missing(newdata)) {
-#'       estimate = "test"
-#'     } else {
-#'         estimate = "train"
-#'     }
-#'   } else {
-#'     if(length(estimate) > 1){
-#'       scoreList < list()
-#'     }
-#'     estimate <- allEstimates[pmatch(estimate, allEstimates)]
-#'     if (any(is.na(estimate)))
-#'       stop("`estimate' should be a subset of ",
-#'            paste(allEstimates, collapse = ", "))
-#'     if (any(estimate == "all")) {
-#'       estimate <- allEstimates[-1] # Try all estimates (except "all")
-#'       if (missing(newdata))
-#'         estimate <- setdiff(estimate, "test")
-#'       if (is.null(object$validation) || !cumulative)
-#'         estimate <- setdiff(estimate, "CV")
-#'     }
-#'   }
-#'   if("train" %in% estimate){
-#'     S <- if (inherits(object, "prcomp")) object$x else object$scores
-#'     if (!(inherits(S, "scores") || inherits(S, "list")))
-#'       class(S) <- "scores"
-#'     attr(S, "explvar") <- explvar(object)
-#'     scoreList$train <- S
-#'   }
-#'   if("test" %in% estimate){
-#'     S <- predict(object, newdata=newdata, type="scores")
-#'     if (!(inherits(S, "scores") || inherits(S, "list")))
-#'       class(S) <- "scores"
-#'     # # Explained variance for newdata
-#'     # if(object$center){
-#'     #   # Extract input data from newdata
-#'     #   Xnewdata <- model.matrix(object, newdata)
-#'     #   Xnewdata <- scale(Xnewdata, center=object$Xmeans, scale=FALSE)
-#'     # }
-#'     # attr(S, "explvar") <- (colSums(S^2)*colSums(object$loadings^2))/sum(Xnewdata^2)
-#'     scoreList$test <- S
-#'   }
-#'   if("CV" %in% estimate){
-#'     N <- nrow(object$scores)
-#'     S <- matrix(0.0, N, ncol(object$scores))
-#'     dimnames(S) <- dimnames(object$scores)
-#'     CVtv <- 0
-#'     for(seg in 1:length(object$validation$segments)){
-#'       newd <- object$model[object$validation$segments[[seg]],,drop=FALSE]
-#'       S[object$validation$segments[[seg]],] <- predict(
-#'         update(object, subset=!((1:N)%in%object$validation$segments[[seg]])),
-#'         newdata = newd,
-#'         type = "scores")
-#'       # if(object$center)
-#'       #   newd <- scale(newd,
-#'       #                 center = colMeans(object$model[!((1:N)%in%object$validation$segments[[seg]]),,drop=FALSE]),
-#'       #                 scale = FALSE)
-#'       # CVtv <- CVtv + sum(newd^2)
-#'     }
-#'     if (!(inherits(S, "scores") || inherits(S, "list")))
-#'       class(S) <- "scores"
-#'     # attr(S, "explvar") <- (colSums(S^2)*colSums(object$loadings^2))/CVtv
-#'     scoreList$CV <- S
-#'   }
-#'   if(length(scoreList) == 1){
-#'     return(scoreList[[1]])
-#'   } else {
-#'     class(scoreList) <- "scoreList"
-#'     return(scoreList)
-#'   }
-#' }
 
 ## Yscores: Return the Yscores
 #' @rdname scores
@@ -375,18 +380,18 @@ Yloadings <- function(object) object$Yloadings
 #' @rdname coef.mvr
 #' @export
 model.frame.mvr <- function(formula, ...) {
-    dots <- list(...)
-    nargs <- dots[match(c("data", "na.action", "subset"), names(dots), 0)]
-    if (length(nargs) || is.null(formula$model)) {
-        fcall <- formula$call
-        fcall$method <- "model.frame"
-        fcall[[1]] <- quote(pls::mvr)
-        fcall[names(nargs)] <- nargs
-        env <- environment(formula$terms)
-        if (is.null(env)) env <- parent.frame()
-        eval(fcall, env, parent.frame())
-    }
-    else formula$model
+  dots <- list(...)
+  nargs <- dots[match(c("data", "na.action", "subset"), names(dots), 0)]
+  if (length(nargs) || is.null(formula$model)) {
+    fcall <- formula$call
+    fcall$method <- "model.frame"
+    fcall[[1]] <- quote(pls::mvr)
+    fcall[names(nargs)] <- nargs
+    env <- environment(formula$terms)
+    if (is.null(env)) env <- parent.frame()
+    eval(fcall, env, parent.frame())
+  }
+  else formula$model
 }
 
 ## model.matrix.mvr: Extract the model matrix from an `mvr' object.
@@ -394,21 +399,21 @@ model.frame.mvr <- function(formula, ...) {
 #' @rdname coef.mvr
 #' @export
 model.matrix.mvr <- function(object, ...) {
-    if (n_match <- match("x", names(object), 0))
-        object[[n_match]]
-    else {
-        data <- model.frame(object, ...)
-        mm <- NextMethod("model.matrix", data = data)
-	mm <- delete.intercept(mm) # Deletes any intercept coloumn
-        ## model.matrix.default prepends the term name to the colnames of
-        ## matrices.  If there is only one predictor term, and the
-        ## corresponding matrix has colnames, remove the prepended term name:
-        mt <- terms(object)
-        if (length(attr(mt, "term.labels")) == 1 &&
-            !is.null(colnames(data[[attr(mt, "term.labels")]])))
-            colnames(mm) <- sub(attr(mt, "term.labels"), "", colnames(mm))
-        return(mm)
-    }
+  if (n_match <- match("x", names(object), 0))
+    object[[n_match]]
+  else {
+    data <- model.frame(object, ...)
+    mm <- NextMethod("model.matrix", data = data)
+    mm <- delete.intercept(mm) # Deletes any intercept coloumn
+    ## model.matrix.default prepends the term name to the colnames of
+    ## matrices.  If there is only one predictor term, and the
+    ## corresponding matrix has colnames, remove the prepended term name:
+    mt <- terms(object)
+    if (length(attr(mt, "term.labels")) == 1 &&
+        !is.null(colnames(data[[attr(mt, "term.labels")]])))
+      colnames(mm) <- sub(attr(mt, "term.labels"), "", colnames(mm))
+    return(mm)
+  }
 }
 
 ## delete.intercept: utility function that deletes the response coloumn from
@@ -428,23 +433,23 @@ model.matrix.mvr <- function(object, ...) {
 #' @seealso \code{\link{mvr}}, \code{\link{model.matrix.mvr}}
 #' @keywords internal
 delete.intercept <- function(mm) {
-    ## Save the attributes prior to removing the intercept coloumn:
-    saveattr <- attributes(mm)
-    ## Find the intercept coloumn:
-    intercept <- which(saveattr$assign == 0)
-    ## Return if there was no intercept coloumn:
-    if (!length(intercept)) return(mm)
-    ## Remove the intercept coloumn:
-    mm <- mm[,-intercept, drop=FALSE]
-    ## Update the attributes with the new dimensions:
-    saveattr$dim <- dim(mm)
-    saveattr$dimnames <- dimnames(mm)
-    ## Remove the assignment of the intercept from the attributes:
-    saveattr$assign <- saveattr$assign[-intercept]
-    ## Restore the (modified) attributes:
-    attributes(mm) <- saveattr
-    ## Return the model matrix:
-    mm
+  ## Save the attributes prior to removing the intercept coloumn:
+  saveattr <- attributes(mm)
+  ## Find the intercept coloumn:
+  intercept <- which(saveattr$assign == 0)
+  ## Return if there was no intercept coloumn:
+  if (!length(intercept)) return(mm)
+  ## Remove the intercept coloumn:
+  mm <- mm[,-intercept, drop=FALSE]
+  ## Update the attributes with the new dimensions:
+  saveattr$dim <- dim(mm)
+  saveattr$dimnames <- dimnames(mm)
+  ## Remove the assignment of the intercept from the attributes:
+  saveattr$assign <- saveattr$assign[-intercept]
+  ## Restore the (modified) attributes:
+  attributes(mm) <- saveattr
+  ## Return the model matrix:
+  mm
 }
 
 ## The following "extraction" functions are mostly used in plot and summary
@@ -454,16 +459,16 @@ delete.intercept <- function(mm) {
 #' @rdname coef.mvr
 #' @export
 respnames <- function(object)
-    dimnames(fitted(object))[[2]]
+  dimnames(fitted(object))[[2]]
 
 ## The names of the prediction variables:
 #' @rdname coef.mvr
 #' @export
 prednames <- function(object, intercept = FALSE) {
-    if (isTRUE(intercept))
-        c("(Intercept)", rownames(object$loadings))
-    else
-        rownames(object$loadings)
+  if (isTRUE(intercept))
+    c("(Intercept)", rownames(object$loadings))
+  else
+    rownames(object$loadings)
 }
 
 ## The names of the components:
@@ -471,16 +476,16 @@ prednames <- function(object, intercept = FALSE) {
 #' @rdname coef.mvr
 #' @export
 compnames <- function(object, comps, explvar = FALSE, ...) {
-    M <- if (is.matrix(object)) object else scores(object)
-    labs <- colnames(M)
-    if (missing(comps))
-        comps <- seq(along = labs)
-    else
-        labs <- labs[comps]
-    if (isTRUE(explvar) && !is.null(evar <- explvar(M)[comps]))
-        labs <- paste(labs, " (", format(evar, digits = 2, trim = TRUE),
-                      " %)", sep = "")
-    return(labs)
+  M <- if (is.matrix(object)) object else scores(object)
+  labs <- colnames(M)
+  if (missing(comps))
+    comps <- seq(along = labs)
+  else
+    labs <- labs[comps]
+  if (isTRUE(explvar) && !is.null(evar <- explvar(M)[comps]))
+    labs <- paste(labs, " (", format(evar, digits = 2, trim = TRUE),
+                  " %)", sep = "")
+  return(labs)
 }
 
 
@@ -488,10 +493,49 @@ compnames <- function(object, comps, explvar = FALSE, ...) {
 #' @rdname coef.mvr
 #' @export
 explvar <- function(object)
-    switch(class(object)[1],
-           mvr = 100 * object$Xvar / object$Xtotvar,
-           princomp =,
-           prcomp = 100 * object$sdev^2 / sum(object$sdev^2),
-           scores =,
-           loadings = attr(object, "explvar")
-           )
+  switch(class(object)[1],
+         mvr = 100 * object$Xvar / object$Xtotvar,
+         princomp =,
+         prcomp = 100 * object$sdev^2 / sum(object$sdev^2),
+         scores =,
+         loadings = attr(object, "explvar")
+  )
+
+
+# Internal functions
+  buildDesignMatrix <- function(data) {
+    if (is.matrix(data)) {
+      if (!is.null(object$Xmeans) && ncol(data) != length(object$Xmeans))
+        stop("'newdata' does not have the correct number of columns")
+      mat <- data
+    } else {
+      Terms <- delete.response(terms(object))
+      mf <- model.frame(Terms, data, na.action = na.pass)
+      if (!is.null(cl <- attr(Terms, "dataClasses")))
+        .checkMFClasses(cl, mf)
+      mat <- delete.intercept(model.matrix(Terms, mf))
+    }
+    if (!is.null(object$scale))
+      mat <- mat / rep(object$scale, each = nrow(mat))
+    mat
+  }
+  centerDesignMatrix <- function(mat) {
+    if (is.null(object$Xmeans))
+      return(mat)
+    mat - rep(object$Xmeans, each = nrow(mat))
+  }
+  attachExplvar <- function(S, contribution, totalXvar) {
+    if (length(contribution) != ncol(S))
+      contribution <- contribution[seq_len(ncol(S))]
+    expl <- if (totalXvar > 0) contribution / totalXvar * 100
+            else rep(NA_real_, ncol(S))
+    if (!is.null(colnames(S)))
+      names(expl) <- colnames(S)
+    else if (inherits(object, "mvr")) {
+      cn <- if (!is.null(object$loading.weights)) colnames(object$loading.weights)
+            else paste("Comp", seq_len(ncol(S)))
+      names(expl) <- cn[seq_len(length(expl))]
+    }
+    attr(S, "explvar") <- expl
+    S
+  }
